# controllers/film.controller.js
@@ -1,6 +1,7 @@
 import filmInforModel from "../models/filmInfor.model.js";
 import filmModel from "../models/film.model.js";
 import filmGenreModel from "../models/genres.model.js";
+import axios from "axios";
 
 //Phân trang phim
 export const layDanhSachPhimPhanTrang = async (req, res, next) => {
@@ -127,7 +128,7 @@ export const layDanhSachPhim = async (req, res, next) => {
     });
 
     res.json({
-      content:  newData,
+      content: newData,
     });
   } catch (err) {
     res.json("Lỗi");
@@ -171,8 +172,7 @@ export const layDanhSachPhimSapChieu = async (req, res, next) => {
     });
 
     res.json({
-      content:  newData,
-
+      content: newData,
     });
   } catch (err) {
     res.json("Lỗi");
@@ -320,12 +320,168 @@ export const layDanhSachPhimHot = async (req, res, next) => {
     res.json("Lỗi");
   }
 };
+// ---------------------------------LẤY PHIM ĐANG CHIẾU--------------------------------------
+
+export const layDanhSachPhimDangChieu = async (req, res, next) => {
+  try {
+    const oneMonthAgo = new Date();
+    oneMonthAgo.setMonth(oneMonthAgo.getMonth() - 1); // calculate the date one month ago
+
+    const data = await filmModel
+      .find(
+        {
+          dangChieu: true, // get only the movies currently showing
+          ngayKhoiChieu: { $lte: new Date(), $gte: oneMonthAgo }, // release date within the past month
+        },
+        { _id: 0 }
+      )
+      .populate({
+        path: "thongTinPhim",
+        model: filmInforModel,
+        select: "-_id",
+      })
+      .populate({
+        path: "thongTinPhim",
+        populate: {
+          path: "theLoai",
+          model: filmGenreModel,
+          select: "-_id",
+        },
+      })
+      .lean();
+
+    const newData = data.map((item) => {
+      const { thongTinPhim, ...rest } = item;
+      const { theLoai, _id, ...rest2 } = thongTinPhim;
+      const tenTheLoai = theLoai.map(({ ten }) => ten);
+      return {
+        ...rest,
+        thongTinPhim: {
+          ...rest2,
+        },
+        tenTheLoai,
+      };
+    });
+
+    res.json({
+      content: newData,
+    });
+  } catch (err) {
+    res.json("Lỗi");
+  }
+};
+
+
+// --------------------------------LẤY PHIM ĐANG CHIẾU PHÂN TRANG--------------------------------
+export const layDanhSachPhimDangChieuPhanTrang = async (req, res, next) => {
+  let page = req.query.soTrang;
+  let PAGE_SIZE = req.query.SoPhanTuTrenTrang;
+
+  if (page) {
+    // Lấy theo phân trang
+    if (page < 1) {
+      page = 1;
+    }
+
+    page = parseInt(page);
+    let soLuongBoQua = (page - 1) * PAGE_SIZE;
+    try {
+      const oneMonthAgo = new Date();
+      oneMonthAgo.setMonth(oneMonthAgo.getMonth() - 1); // calculate the date one month ago
+
+      const total = await filmModel.countDocuments({
+        dangChieu: true,
+        ngayKhoiChieu: { $lte: new Date(), $gte: oneMonthAgo },
+      });
+      if (soLuongBoQua >= total) {
+        return res.json({
+          content: {
+            tongSoTrang: Math.ceil(total / PAGE_SIZE),
+            trangHienTai: page,
+            tongSoLuongHienCo: total,
+            soPhanTuHienTai: 0,
+            data: [],
+          },
+        });
+      }
+      let soLuongPhanTuHienTai = PAGE_SIZE;
+      if (PAGE_SIZE > total) {
+        soLuongPhanTuHienTai = total;
+      } else if (total - soLuongBoQua < PAGE_SIZE) {
+        soLuongPhanTuHienTai = total - soLuongBoQua;
+      }
+      const data = await filmModel
+        .find(
+          {
+            dangChieu: true,
+            ngayKhoiChieu: { $lte: new Date(), $gte: oneMonthAgo },
+          },
+          { _id: 0 }
+        )
+        .populate({
+          path: "thongTinPhim",
+          model: filmInforModel,
+          select: "-_id",
+        })
+        .populate({
+          path: "thongTinPhim",
+          populate: {
+            path: "theLoai",
+            model: filmGenreModel,
+            select: "-_id",
+          },
+        })
+        .lean()
+        .skip(soLuongBoQua)
+        .limit(PAGE_SIZE);
+      let tongSoTrang = Math.ceil(total / PAGE_SIZE);
+      if (page > tongSoTrang) {
+        return res.json({
+          content: {
+            tongSoTrang: tongSoTrang,
+            trangHienTai: page,
+            tongSoLuongHienCo: total,
+            soPhanTuHienTai: 0,
+            data: [],
+          },
+        });
+      }
+      const newData = data.map((item) => {
+        const { thongTinPhim, ...rest } = item;
+        const { theLoai, _id, ...rest2 } = thongTinPhim;
+        const tenTheLoai = theLoai.map(({ ten }) => ten);
+        return {
+          ...rest,
+          thongTinPhim: {
+            ...rest2,
+          },
+          tenTheLoai,
+        };
+      });
+
+      res.json({
+        content: {
+          tongSoTrang: tongSoTrang,
+          trangHienTai: page,
+          tongSoLuongHienCo: total,
+          soPhanTuHienTai: parseInt(soLuongPhanTuHienTai),
+          data: newData,
+        },
+      });
+    } catch (err) {
+      res.json("Lỗi");
+    }
+  } else {
+    res.status(400).json("Phải có số trang và số phần tử trên trang");
+  }
+};
+
 
 // ----------------------------------LẤY THÔNG TIN PHIM ---------------------------------------
 export const layThongTinPhim = async (req, res, next) => {
   try {
-    const  maPhim  = parseInt(req.query.maPhim);
-    
+    const maPhim = parseInt(req.query.maPhim);
+
     const data = await filmModel
       .findOne({ maPhim }, { _id: 0 })
       .populate({
@@ -369,15 +525,13 @@ export const layThongTinPhim = async (req, res, next) => {
   }
 };
 
-
-
 // ---------------------------------XÓA PHIM ---------------------------------------------------
 export const xoaPhim = (req, res, next) => {
   const maPhim = parseInt(req.query.maPhim);
-  console.log(maPhim)
+  console.log(maPhim);
   filmModel.findOne({ maPhim }, (err, film) => {
     if (err) {
-      console.log(err)
+      console.log(err);
       res.json("Lỗi");
     } else {
       if (!film) {
@@ -395,57 +549,63 @@ export const xoaPhim = (req, res, next) => {
   });
 };
 
-
 // -------------------------------- THÊM PHIM ----------------------------------
-export const themPhim = (req, res, next) => {
-  const tenPhim = req.body.tenPhim;
-  const biDanh = req.body.biDanh;
-  const trailer = req.body.trailer;
-  const hinhAnh = req.body.hinhAnh;
-  const moTa = req.body.moTa;
-  const ngayKhoiChieu = req.body.ngayKhoiChieu;
-  const danhGia = req.body.danhGia;
-  const hot = req.body.hot;
-  const dangChieu = req.body.dangChieu;
-  const sapChieu = req.body.sapChieu;
-  const thongTinPhim = req.body.thongTinPhim;
-  filmModel
-    .findOne({
-      $or: [
-        { tenPhim: tenPhim },
-        { biDanh: biDanh },
-        { trailer: trailer },
-        { hinhAnh: hinhAnh },
-        { moTa: moTa },
-        { ngayKhoiChieu: ngayKhoiChieu },
-        { danhGia: danhGia },
-        { hot: hot },
-        { dangChieu: dangChieu },
-        { sapChieu: sapChieu },
-        { thongTinPhim: thongTinPhim },
-      ],
-    })
-    .then((film) => {
-      if (film) {
-        // username hoặc email đã tồn tại, trả về thông báo tương ứng
-        if (film.tenPhim === tenPhim) {
-          res.status(400).json({ message: "Phim đã tồn tại" });
-        } else if (film.biDanh === biDanh) {
-          res.status(400).json({ message: "Bí danh đã tồn tại" });
-        } else if (film.trailer === trailer) {
-          res.status(400).json({ message: "Trailer đã tồn tại" });
-        } else if (film.hinhAnh === hinhAnh) {
-          res.status(400).json({ message: "Hình ảnh đã tồn tại" });
-        } else if (film.thongTinPhim === thongTinPhim) {
-          res.status(400).json({ message: "Thông tin phim đã tồn tại" });
-        }
-      } else {
-      }
-    })
-    .then((film) => {
-      res.json({ message: "Thêm mới thành công" });
-    })
-    .catch((error) => {
-      res.status(500).json({ message: "Lỗi" });
+
+// ---------------------------------LẤY PHIM TỰ ĐỘNG -------------------------------------
+
+export const layPhimTuDong = async () => {
+  let response = await axios.get(
+    "https://api.themoviedb.org/3/movie/upcoming",
+    {
+      params: {
+        api_key: process.env.API_KEY,
+      },
+    }
+  );
+  console.log("file: film.controller.js:406 ~ response:", response);
+  let check = [];
+  response?.data?.results.map((item) => check.push(item.original_title));
+
+  try {
+    const existingFilms = await filmModel.find({ tenPhim: { $in: check } });
+    const existingFilmNames = existingFilms.map((film) => film.tenPhim);
+    const newFilms = response?.data?.results.filter(
+      (item) => !existingFilmNames.includes(item.original_title)
+    );
+    const slugify = (text) =>
+      text
+        .toString()
+        .toLowerCase()
+        .replace(/\s+/g, "-") // Thay thế khoảng trắng bằng dấu gạch ngang
+        .replace(/[^\w\-]+/g, "") // Xóa các ký tự không hợp lệ
+        .replace(/\-\-+/g, "-") // Xóa các dấu gạch ngang liên tiếp
+        .replace(/^-+/, "") // Xóa các dấu gạch ngang ở đầu chuỗi
+        .replace(/-+$/, ""); // Xóa các dấu gạch ngang ở cuối chuỗi
+
+    newFilms.map((item) => {
+      const tenPhim = item.original_title;
+      const biDanh = slugify(tenPhim);
+      const ngayKhoiChieu = new Date(item.release_date);
+      const dangChieu = ngayKhoiChieu <= new Date();
+      const sapChieu = !dangChieu;
+      filmModel.create({
+        tenPhim,
+        moTa: item.overview,
+        maPhim: parseInt(item.id),
+        ngayKhoiChieu: item.release_date,
+        danhGia: item.vote_average,
+        trailer: "https://www.youtube.com/embed/wHLpZycZNwE",
+        biDanh,
+        hot: true,
+        dangChieu,
+        sapChieu,
+        hinhAnh: `https://image.tmdb.org/t/p/original/${item.poster_path}`,
+        thongTinPhim: "642bdccd6501a58c8393b06d",
+      });
     });
+
+    console.log(`Có ${newFilms.length} phim mới được thêm vào MongoDB`);
+  } catch (error) {
+    console.error(error);
+  }
 };
